# starrlib

./: .gitignore  CHANGELOG.md  flake.nix  justfile  pyproject.toml
.github/workflows/: tests.yml
starrlib/: typed_bytes.py
tests/: test_typed_bytes.py
