[tool.poetry]
name = "starrlib"
version = "0.1.1"
description = "common starr utils"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/StarrFox/starrlib"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = ">=24.4.2"
tomli = "^2.0.1"

[tool.poetry.group.tests.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
